openshift/overlays/staging/patches/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-app
spec:
  replicas: 3
  template:
    metadata:
      annotations:
        environment: staging
    spec:
      containers:
      - name: payment-app
        image: default-route-openshift-image-registry.apps.itz-9i05h3.hub01-lb.techzone.ibm.com/payment-app-staging/payment-app:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
